deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-app-deployment
  labels:
    app: nest-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nest-app
  template:
    metadata:
      labels:
        app: nest-app
    spec:
      containers:
      - name: nest-container
        image: mahadali123/nest-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
