service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-app-service
spec:
  selector:
    app: nest-app
  ports:
    - protocol: TCP
      port: 80         # Ingress is port par baat karega
      targetPort: 3000 # App is port par sun rahi hai
