ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # <--- Ye add karein
  rules:
  - host: my-nest-api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nest-app-service
            port:
              number: 80
